# windowHooker2

./: .gitignore  Cargo.toml  README.md  build.bat
hook/: Cargo.toml  build.rs
hook/src/: lib.rs
manager/: Cargo.toml  build.rs
manager/src/: advanced_paste.rs  always_on_top.rs  app_killer.rs  explorerstarts.rs  keyboard_hooker.rs  main.rs  mem_cleaner.rs  menu.rs  nocopilot.rs  rollup.rs  settings.rs  startupreg.rs  transparency.rs  tray.rs
shared/: Cargo.toml
shared/src/: lib.rs
windowmanager/: cargo.toml
windowmanager/src/: alttabov.rs  fancyzone.rs  lib.rs  winnsnap.rs
